<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">RabbitInspector</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="server_UUID" tools:ignore="TypographyDashes">513A4666-E634-43E0-A2FA-DC74058D74A2</string>
    <string name="next_prompt">&gt;&gt;</string>
    <string name="previous_prompt">&lt;&lt;</string>
    <string name="team_prompt">Team:</string>
    <string name="wheel_prompt">Main Wheel Type:</string>
    <string name="wheelnum_prompt">Num Wheels:</string>
    <string name="coolness_prompt">Chillness:</string>
    <string name="widget_prompt">Widget Value:</string>
    <string name="send_prompt">Ready To Transmit?</string>
    <string name="send_button_prompt">Send</string>
    <string name="send_button_address">Address</string>
    <string name="server_address">60:C5:47:90:D9:15</string>
    <string name="server_address_other">00:19:0E:16:B2:2C</string>
    <string-array name="bluetooth_address_options">
        <item>60:C5:47:90:D9:15</item>
    	<item>00:19:0E:16:B2:2C</item>
    </string-array>
</resources>
